<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:id="@+id/userWelcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_view"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:background="#000" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/laptopRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp" >

            <RadioButton
                android:id="@+id/dell_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dell_text_view" />

            <RadioButton
                android:id="@+id/mac_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mac_text_view" />S

            <RadioButton
                android:id="@+id/hp_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_text_view" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/iphone4sCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:text="@string/iPhone4s_check_box" />

        <CheckBox
            android:id="@+id/iphone5CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iPhone5_check_box" />

        <CheckBox
            android:id="@+id/samsungs4CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sansungS4_check_box" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <CheckBox
            android:id="@+id/ipadCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:text="@string/iPad_check_box" />

        <CheckBox
            android:id="@+id/androidCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_check_box" />

        <CheckBox
            android:id="@+id/kindleCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kindle_check_box" />
        
    </TableRow>
    
      <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/checkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:onClick="checkout"
            android:text="@string/button_checkout" />

    </TableRow>

</TableLayout>