<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity" >

        <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000" >

        <TextView
            android:id="@+id/userWelcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="1"
            android:text="@string/welcome_text_view"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/ReserveInventoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/button_reserve_inventory" 
            android:onClick="OpenReservePage"/>
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/EditOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="EditOrder"
            android:text="@string/button_edit_order" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/AddInventoryToSQLButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/button_add_inventory"
            android:onClick="OpenAddInventoryPage" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/HiddenUserNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="gone" />

    </TableRow>
    
    <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:gravity="center" >

        <Button
            android:id="@+id/EditInventoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_inventory" 
            android:onClick="EditInventory"/>
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center" >

        <Button
            android:id="@+id/CameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_camera"
            android:onClick="startCamera" />

    </TableRow>
    
</TableLayout>
