<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    tools:context=".EditInventoryActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000" >

        <TextView
            android:id="@+id/EditInventoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="1"
            android:text="@string/text_view_edit_inventory"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:textSize="@dimen/page_title__25sp" />

    </TableRow>
    
	<TableRow
	    android:id="@+id/tableRow2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/InventoryTypeTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="@dimen/padding_5dp"
	        android:text="@string/text_view_inventory_type"
	        android:textSize="@dimen/inventory_addPage_text_23sp" />

	    <EditText
	        android:id="@+id/EditInventoryTypeEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="14"
	        android:inputType="text"
	        android:paddingRight="@dimen/padding_5dp">
			
	    </EditText>
	</TableRow>
	
	<TableRow
	    android:id="@+id/tableRow3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/IMEITextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="@dimen/padding_5dp"
	        android:text="@string/text_view_inventory_IMEI"
	        android:textSize="@dimen/inventory_addPage_text_23sp" />

	    <EditText
	        android:id="@+id/EditInventoryIMEIEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="14"
	        android:inputType="number"
	        android:paddingRight="@dimen/padding_5dp" >

	    </EditText>
	</TableRow>
	<TableRow
	    android:id="@+id/tableRow4"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/InventoryNameTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="@dimen/padding_5dp"
	        android:text="@string/text_view_inventory_name"
	        android:textSize="@dimen/inventory_addPage_text_23sp" />

	    <EditText
	        android:id="@+id/EditInventoryNameEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="14"
	        android:inputType="text"
	        android:paddingRight="@dimen/padding_5dp" >

	    </EditText>
	</TableRow>
	<TableRow
	    android:id="@+id/tableRow5"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/InventoryCompanyTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="@dimen/padding_5dp"
	        android:text="@string/text_view_inventory_company"
	        android:textSize="@dimen/inventory_addPage_text_23sp" />

	    <EditText
	        android:id="@+id/EditInventoryCompanyEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="14"
	        android:inputType="text"
	        android:paddingRight="@dimen/padding_5dp" >

	    </EditText>
	</TableRow>
	<TableRow
	    android:id="@+id/tableRow6"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/InventoryVersionTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="@dimen/padding_5dp"
	        android:text="@string/text_view_inventory_version"
	        android:textSize="@dimen/inventory_addPage_text_23sp" />

	    <EditText
	        android:id="@+id/EditInventoryVersionEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="14"
	        android:inputType="text"
	        android:paddingRight="@dimen/padding_5dp" >

	    </EditText>
	</TableRow>
	<TableRow
	    android:id="@+id/tableRow7"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/InventoryBuyDateTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="@dimen/padding_5dp"
	        android:text="@string/text_view_inventory_buy_date"
	        android:textSize="@dimen/inventory_addPage_text_23sp" />

	    <EditText
	        android:id="@+id/EditInventoryBuyDateEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="14"
	        android:inputType="text"
	        android:paddingRight="@dimen/padding_5dp" >

	    </EditText>
	</TableRow>
	<TableRow
	    android:id="@+id/tableRow8"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/InventoryQtyTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="@dimen/padding_5dp"
	        android:text="@string/text_view_inventory_qty"
	        android:textSize="@dimen/inventory_addPage_text_23sp" />

	    <EditText
	        android:id="@+id/EditInventoryQtyEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="14"
	        android:inputType="number"
	        android:paddingRight="@dimen/padding_5dp" >

	    </EditText>
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow9"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/EditInventoryToEditListButton"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_back"
	        android:onClick="listInventoryForEdit" />

		<Button
		    android:id="@+id/EditInventoryToSQLButton"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:onClick="editInventory"
		    android:text="@string/button_edit_inventory"
		    android:layout_weight="1" />
		

	</TableRow>
    
    
    
</TableLayout>