<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrintImageActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/ImageViewInfostretch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="171dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_infostretch"
            android:src="@drawable/infostretch" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/PrintImageButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="printImage"
            android:text="@string/button_print_image" />

        <Button
            android:id="@+id/PrintImageToHomeButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goTOHomePage"
            android:text="@string/button_home_page" />
    </TableRow>

</TableLayout>