<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000" >

        <TextView
            android:id="@+id/AddInventoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="1"
            android:text="@string/text_view_reserve_inventory_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:textSize="@dimen/page_title__25sp" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1">
        <TextView 
            android:id="@+id/itemId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    	<ListView
    	    android:id="@+id/ReservePageListView"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1">
    	</ListView>
	</TableRow>
	
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ReserveButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_checkout"
            android:layout_weight="1"
            android:onClick="reserveConfirmation" />

        <Button
            android:id="@+id/EditOrderButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goTOHomePage"
            android:text="@string/button_home_page" />

    </TableRow>
    
</TableLayout>

